<resources>
    <string name="app_name">UnChain</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_chat">Chat</string>
    <string name="menu_title_settings">Settings</string>
    <string name="get_started">Get Started</string>
    //sementara
    <string name="web_id">742693144827-tnmeh66dv3v5dcv0aajdie62igppce21.apps.googleusercontent.com</string>
    <string name="userName">John Doe</string>
    <string name="userEmail">johndoe@gmail.com</string>
    <string name="edit_title">Edit Profile</string>
    <string name="parent_menu_preferences">Preferences</string>
    <string name="Reccomendation">Did you track your sugar today?</string>
    <string name="tvFullName">John Doe</string>
    <string name="tvUserEmail">johndoe@gmail.com</string>
    <string name="start_tracking_now">Start Tracking Now 🚀</string>
    <string name="take_your_first_step_towards_managing_your_sugar_intake_today">Take your first step towards managing your sugar intake today 👣</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="rec_desc">Description Lorem Ipsum dolor sit amet</string>
    <string name="title_daily">Keep Your Progress</string>
    <string name="sugar_input">0gr</string>
    <string name="sub_title_daily">Daily Sugar Consumption :</string>
    <string name="daily_consume_title">Daily Consume</string>
    <string name="greetings">Welcome Back 👋</string>
    <string name="add_button">Add +</string>
    <string name="weekly_title">Weekly Overview</string>
    <string name="monthly_title">Monthly Summary</string>
    <string name="monthly_sugar_sub">Monthly Sugar Consumption :</string>
    <string name="date"></string>
    <string name="weekly_sugar_sub">Weekly Sugar Consumption :</string>
    <string name="title_recommendation">Weekly Sugar Analysis</string>
    <string name="confidence">Confidence Score</string>
    <string name="weekly_sugar_level">Weekly Sugar Level:</string>
    <string name="rec_desc2">Based on your weekly sugar consumption pattern</string>
    <string name="history_weight">20gr</string>
    <string name="food_name">Food Name</string>
    <string name="date_history">23 Nov</string>
    <string name="history_card">Additional details here</string>
    <string name="icon">Icon</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="tbd">-</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="edit_button">Edit</string>
    <string name="date_birth">Date of Birth</string>
    <string name="support">Support</string>
    <string name="logout_icon">logout icon</string>
    <string name="logout">Logout</string>
    <string name="suppor_icon">suppor icon</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_icon">dark mode icon</string>
    <string name="notification">Push Notification</string>
    <string name="notification_icon">Notification icon</string>
    <string name="monthly_tabs">Monthly</string>
    <string name="weekly_tabs">Weekly</string>
    <string name="today_tabs">Today</string>
    <string name="profile">Profile Picture</string>
    <string name="placeholder_chat">Type a message...</string>
    <string name="send_button">Send</string>
    <string name="enter_height">Enter Height (e.g., 170cm)</string>
    <string name="enter_weight">Enter Weight (e.g., 70kg)</string>
    <string name="enter_date">Enter Date of Birth (e.g., 2000-01-01)</string>
    <string name="food_tabs">Food</string>
    <string name="beverages_tabs">Beverages</string>
    <string name="name_product">Name</string>
    <string name="sugar_amount">Sugar Amount</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="login_illustration">login illustration</string>
    <string name="onboarding_image">onboarding image</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="free_trials">Try Premium for IDR0 <strike>IDR50.000</strike></string>
    <string name="Sub_freetrials">1-month free trial with 24/7 support. We\'ll remind you 7 days before your trial ends.</string>
    <string name="unlimited_history">Unlimited History</string>
    <string name="ad_free">Enjoy an ad-free experience</string>
    <string name="notif"><![CDATA[Get real-time notifications.]]></string>
    <string name="discount">Bigger discounts with integrated healthcare</string>
    <string name="unlimited_chatbot">Unlimited Chatbot</string>
    <string name="chatbot">Smarter, more intuitive chatbot</string>
    <string name="imporvment">Accurately analyze habits to target areas for improvement.</string>
    <string name="food_database">Explore diverse meal options from our 100-million food database.</string>
    <string name="title_premium">Get Premium</string>
    <string name="close">Close</string>
    <string name="icon_check">icon_check</string>
    <string name="achievements">Achievements</string>
    <string name="see_all">See All</string>
    <string name="_7_day_streak">7 Day Streak</string>
    <string name="track_7_days">Track 7 days</string>
    <string name="achievemeny_badge">achievemeny badge</string>
    <string name="_14_day_streak">14 Day Streak</string>
    <string name="track_14_days">Track 14 days</string>
    <string name="_30_day_streak">30 Day Streak</string>
    <string name="track_30_days">Track 30 days</string>
    <string name="challenges_title">Challenges</string>
    <string name="_7_day_sugar_tracking">7-Day Sugar Tracking</string>
    <string name="_6_days_remaining">6 days remaining</string>
    <string name="subtitle_achievement">Track your sugar intake daily for 7 days to earn this badge</string>
    <string name="title_progress">Day 1</string>
    <string name="notifications_tittle">notifications</string>
</resources>