<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Profile Image -->
        <ImageView
            android:layout_marginTop="77dp"
            android:id="@+id/userProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/userName"
            app:circleCrop="true" />

        <!-- User Name -->
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <!-- User Email -->
        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userEmail"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="16dp" />

        <!-- Edit Profile Button -->
        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_title"
            android:background="@drawable/button"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_marginBottom="24dp" />

        <!-- Preferences Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/parent_menu_preferences"
            android:textStyle="bold" />

        <!-- Notification Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_notification_outlined" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="Push Notification" />

            <Switch
                android:id="@+id/switch_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Dark Mode Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_dark_mode_outlined" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="Dark Mode" />

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Support Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_help_outlined"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="Support" />
        </LinearLayout>

        <!-- Logout Option -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_exit_outlined"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="Logout"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
